test/integration/bad/signature_sampling_unknown2.stan
data {
  int x;
}
parameters {
  vector[4] theta;
}
model {
  x ~ foo_whatev(theta);
}
